--- a/app/src/main/res/layout/include_item_note_info.xml
+++ b/app/src/main/res/layout/include_item_note_info.xml
@@ -7,7 +7,7 @@
 
         <import type="java.util.List"/>
         <import alias="v" type="android.view.View"/>
-        <import alias="def" type="sgtmelon.scriptum.office.annot.def.TypeNoteDef"/>
+        <import alias="noteType" type="sgtmelon.scriptum.office.annot.def.NoteType"/>
 
         <variable name="noteItem" type="sgtmelon.scriptum.app.model.item.NoteItem"/>
 
@@ -31,7 +31,7 @@
                 android:id="@+id/note_info_bind_image"
                 style="@style/NoteItem.Indicator.Info"
                 android:contentDescription="@null"
-                android:src='@{noteItem.type == def.text ? @drawable/ic_bind_text : @drawable/ic_bind_roll}'
+                android:src='@{noteItem.type == noteType.TEXT ? @drawable/ic_bind_text : @drawable/ic_bind_roll}'
                 android:visibility='@{noteItem.status ? v.VISIBLE : v.GONE}'
                 tools:srcCompat="@drawable/ic_bind_roll"/>
 
@@ -39,8 +39,8 @@
                 android:id="@+id/note_info_progress_text"
                 style="@style/NoteItem.Info"
                 android:layout_width="wrap_content"
-                android:text='@{noteItem.type == def.roll ? noteItem.text : ""}'
-                android:visibility='@{noteItem.type == def.roll ?  v.VISIBLE : v.GONE}'
+                android:text='@{noteItem.type == noteType.ROLL ? noteItem.text : ""}'
+                android:visibility='@{noteItem.type == noteType.ROLL ?  v.VISIBLE : v.GONE}'
                 tools:text="@string/preview_note_done"
                 tools:visibility="visible"/>
 
