--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical"
-        tools:context=".app.view.activity.IntroActivity">
+        tools:context=".app.ui.intro.IntroActivity">
 
     <androidx.viewpager.widget.ViewPager
             android:id="@+id/intro_pager"
