--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".app.view.activity.MainActivity">
+        tools:context=".app.ui.main.MainActivity">
 
     <!-- TODO 13.10.18 добавить везде где надо contentDescription -->
 
