--- a/app/src/main/res/layout/activity_develop.xml
+++ b/app/src/main/res/layout/activity_develop.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".app.view.activity.DevelopActivity">
+        tools:context=".app.screen.develop.DevelopActivity">
 
     <ScrollView
             android:layout_width="match_parent"
