--- a/app/src/main/res/layout/include_roll_note_panel.xml
+++ b/app/src/main/res/layout/include_roll_note_panel.xml
@@ -12,15 +12,16 @@
         <variable name="keyEdit" type="boolean"/>
         <variable name="noteItem" type="sgtmelon.scriptum.app.model.item.NoteItem"/>
 
-        <variable name="noteClick"
-                  type="sgtmelon.scriptum.office.intf.MenuIntf.Note.NoteMenuClick"/>
-        <variable name="deleteClick"
-                  type="sgtmelon.scriptum.office.intf.MenuIntf.Note.DeleteMenuClick"/>
+        <variable name="menuClick" type="sgtmelon.scriptum.app.screen.note.roll.MenuCallback"/>
 
         <variable name="undoAccess" type="boolean"/>
         <variable name="redoAccess" type="boolean"/>
+
         <variable name="rankEmpty" type="boolean"/>
+
+        <!-- TODO если в заметке есть категории - значит выбрано -->
         <variable name="rankSelect" type="boolean"/>
+
         <variable name="saveEnabled" type="boolean"/>
 
     </data>
@@ -53,7 +54,7 @@
                         android:id="@+id/note_panel_restore_button"
                         style="@style/Enter.Button"
                         android:contentDescription="@string/menu_note_restore"
-                        android:onClick='@{() -> deleteClick.onMenuRestoreClick()}'
+                        android:onClick='@{() -> menuClick.onRestoreClick()}'
                         android:tint="?attr/clContent"
                         app:srcCompat="@drawable/ic_restore"/>
 
@@ -61,7 +62,7 @@
                         android:id="@+id/note_panel_restore_open_button"
                         style="@style/Enter.Button"
                         android:contentDescription="@string/menu_note_restore_open"
-                        android:onClick='@{() -> deleteClick.onMenuRestoreOpenClick()}'
+                        android:onClick='@{() -> menuClick.onRestoreOpenClick()}'
                         android:tint="?attr/clContent"
                         app:srcCompat="@drawable/ic_restore_open"/>
 
@@ -69,7 +70,7 @@
                         android:id="@+id/note_panel_clear_button"
                         style="@style/Enter.Button"
                         android:contentDescription="@string/menu_note_clear"
-                        android:onClick='@{() -> deleteClick.onMenuClearClick()}'
+                        android:onClick='@{() -> menuClick.onClearClick()}'
                         android:tint="?attr/clAccent"
                         app:srcCompat="@drawable/ic_clear"/>
 
@@ -87,7 +88,7 @@
                         android:id="@+id/note_panel_undo_button"
                         style="@style/Enter.Button"
                         android:contentDescription="@null"
-                        android:onClick='@{() -> noteClick.onUndoClick()}'
+                        android:onClick='@{() -> menuClick.onUndoClick()}'
                         app:boolExpression='@{undoAccess}'
                         app:enabled='@{undoAccess}'
                         app:falseColor='@{R.attr.clDisable}'
@@ -99,7 +100,7 @@
                         android:id="@+id/note_panel_redo_button"
                         style="@style/Enter.Button"
                         android:contentDescription="@null"
-                        android:onClick='@{() -> noteClick.onRedoClick()}'
+                        android:onClick='@{() -> menuClick.onRedoClick()}'
                         app:boolExpression='@{redoAccess}'
                         app:enabled='@{redoAccess}'
                         app:falseColor='@{R.attr.clDisable}'
@@ -111,7 +112,7 @@
                         android:id="@+id/note_panel_rank_button"
                         style="@style/Enter.Button"
                         android:contentDescription="@null"
-                        android:onClick='@{() -> noteClick.onMenuRankClick()}'
+                        android:onClick='@{() -> menuClick.onRankClick()}'
                         app:boolExpression='@{!rankEmpty}'
                         app:enabled='@{!rankEmpty}'
                         app:falseColor='@{R.attr.clDisable}'
@@ -123,7 +124,7 @@
                         android:id="@+id/note_panel_color_button"
                         style="@style/Enter.Button"
                         android:contentDescription="@null"
-                        android:onClick='@{() -> noteClick.onMenuColorClick()}'
+                        android:onClick='@{() -> menuClick.onColorClick()}'
                         android:tint="?attr/clContent"
                         app:srcCompat="@drawable/ic_palette"/>
 
@@ -136,7 +137,7 @@
                         android:id="@+id/note_panel_save_button"
                         style="@style/Enter.Button"
                         android:background="?attr/selectableItemBackgroundBorderless"
-                        android:onClick='@{() -> noteClick.onMenuSaveClick(true)}'
+                        android:onClick='@{() -> menuClick.onSaveClick(true)}'
                         android:text="@string/menu_note_save"
                         app:enabled='@{saveEnabled}'/>
 
@@ -154,7 +155,7 @@
                         android:id="@+id/note_panel_check_button"
                         style="@style/Enter.Button"
                         android:contentDescription='@{noteItem.allCheck ? @string/menu_note_check_zero : @string/menu_note_check_all}'
-                        android:onClick='@{() -> noteClick.onMenuCheckClick()}'
+                        android:onClick='@{() -> menuClick.onCheckClick()}'
                         android:visibility='@{noteItem.type == noteType.ROLL ? v.VISIBLE : v.GONE}'
                         app:boolExpression='@{noteItem.allCheck}'
                         app:falseColor='@{R.attr.clContent}'
@@ -166,7 +167,7 @@
                         android:id="@+id/note_panel_bind_button"
                         style="@style/Enter.Button"
                         android:contentDescription="@string/menu_note_status_bind"
-                        android:onClick='@{() -> noteClick.onMenuBindClick()}'
+                        android:onClick='@{() -> menuClick.onBindClick()}'
                         android:src='@{noteItem.type == noteType.TEXT ? @drawable/ic_bind_text : @drawable/ic_bind_roll}'
                         app:boolExpression='@{noteItem.status}'
                         app:falseColor='@{R.attr.clContent}'
@@ -178,7 +179,7 @@
                         android:id="@+id/note_panel_convert_button"
                         style="@style/Enter.Button"
                         android:contentDescription='@{noteItem.type == noteType.TEXT ? @string/menu_note_convert_to_roll : @string/menu_note_convert_to_text}'
-                        android:onClick='@{() -> noteClick.onMenuConvertClick()}'
+                        android:onClick='@{() -> menuClick.onConvertClick()}'
                         android:tint="?attr/clContent"
                         app:srcCompat="@drawable/ic_convert"/>
 
@@ -186,7 +187,7 @@
                         android:id="@+id/note_panel_delete_button"
                         style="@style/Enter.Button"
                         android:contentDescription="@string/menu_note_delete"
-                        android:onClick='@{() -> deleteClick.onMenuDeleteClick()}'
+                        android:onClick='@{() -> menuClick.onDeleteClick()}'
                         android:tint="?attr/clContent"
                         app:srcCompat="@drawable/ic_bin"/>
 
@@ -199,7 +200,7 @@
                         android:id="@+id/note_panel_edit_button"
                         style="@style/Enter.Button"
                         android:background="?attr/selectableItemBackgroundBorderless"
-                        android:onClick='@{() -> noteClick.onMenuEditClick(true)}'
+                        android:onClick='@{() -> menuClick.onEditClick(true)}'
                         android:text="@string/menu_note_edit"/>
 
             </LinearLayout>
